poll-webapp/src/main/webapp/skin/less/poll.less
@import "variables.less";
@import "mixins.less";
@images-path: "/poll/images";

.composerActions {
  .actionItem {
    .actionItemIcon {
      .createPollComposerIcon {
        background: url('@{images-path}/create-poll-icon.png') no-repeat;
        width: 60px;
        height: 60px;
        margin: 10px 0 0 10px;
        background-size: 40px;
      }
    }
    .actionItemDescription {
      .actionLabel.createdPollIcon::after {
         content: url('@{images-path}/circle-checked.svg');
         margin-left: 20px;
      }
    }
  }
}

#createPollDrawer {
  .createPollDrawerContent {
    .custom-poll-textarea {
      textarea {
        padding: 8px 8px;
        box-shadow: none;
      }
    }
    select.poll-select-duration {
      padding: 5px 5px;
    }
  }
}

#poll-activity {
  .poll-content {
    color: @darkGrey;
    .no-select {
      -webkit-touch-callout: none;
      -webkit-user-select: none;
      -khtml-user-select: none;
      -moz-user-select: none;
      -ms-user-select: none;
      user-select: none;
    }
    .question {
      font-weight: bold;
      font-size: 18px;
    }
    .answer-content {
      margin: 20px 0; 
      .answer:first-child {
        margin-top: 0;
      }
      .answer-no-vote {
        text-align: center;
        border: 2px solid @primaryColor;
        box-sizing: border-box;
        border-radius: 5px;
        cursor: pointer; 
        padding: 5px 0; 
        transition: background .2s ease-in-out;
        -webkit-transition: background .2s ease-in-out;
        -moz-transition: background .2s ease-in-out;
        .vote-content {
          color: @primaryColor;
          transition: color .2s ease-in-out;
          -webkit-transition: color .2s ease-in-out;
          -moz-transition: color .2s ease-in-out;
        }
        .vote-content-poll-creator {
          color: white;
        }
        &.active {
          background: @primaryColor;
          .vote-content {
            color: @lightWhite;
          }
        }
      }
      .answer-cant-vote {
	    opacity: 0.5;
	  }
      .answer-voted {
        padding: 5px 0;
        .vote-content {
          position: relative;
          z-index: 1;
        }
        .vote-percent {
          font-weight: bold;
          min-width: 51px;
          display: inline-block;
          margin:0 10px;
          position: relative;
          z-index: 1;
        }
        &.selected {
          .vote-content:before {
            content:'✔';
            margin-right: 10px;
          }
        }
        &:hover {
          cursor: pointer;
        }
      }
      .voteAnswer {
        position: relative;
        margin-top: 10px;
        .voteBackground {
          position: absolute;
          width: 0%;
          top: 0;
          left: 0;
          bottom: 0;
          z-index: 0;
          background-color: @greyColor;
          border-top-left-radius: 5px;
          border-bottom-left-radius: 5px;
          transition: all .3s cubic-bezier(0.5,1.2,.5,1.2);
          -webkit-transition: all .3s cubic-bezier(0.5,1.2,.5,1.2);
          -moz-transition: all .3s cubic-bezier(0.5,1.2,.5,1.2);
          &.selected {
            background-color: @primaryColor;
          }
        }
        .voteBackgroundPollCreator {
          height: 85%;
          margin: 2px 2px;
        }
        .poll-creator-non-member {
          opacity: 0.68;
          cursor: pointer;
        }
      }
    }
    .total-votes {
      font-size: 14px;
      color: @grayLight
    }
  }
}

#poll-activity-stream {
  .votes-remaining-state {
    font-size: 14px;
    color: @grayLight
  }
}

